# pir

./: README.md
Experiments/: Experiments_README.md  Histogram.ipynb
Experiments/PIR/cpp/libfss/: fss-client.h  fss-common.h
Experiments/PIR/cpp/libtfhe/: tfhe.h
Experiments/PIR/cpp/logs/: Client_Overhead_30_08_20_10.txt  Client_Overhead_30_08_20_14.txt  Hashing_log_26_08_21_06.txt  Hashing_log_27_08_09_53.txt  README.md  ShelterSearch_16Core_32bit_r_log_30_08_16_33.txt  ShelterSearch_16Core_64bit_r_log_30_08_16_27.txt
Experiments/PIR/cpp/src/: CMakeLists.txt  Makefile  README.md  fss-client.cpp  fss-common.cpp  fss-server.cpp  pir-test.cpp  pir_client.cpp  pir_common.cpp  pir_common.h  server_alpha.cpp  server_beta.cpp  server_gamma.cpp  sumit-experiment.cpp
Experiments/PIR/cpp/src/Kuku/src/kuku/: common.h  kuku.cpp  kuku.h
Experiments/PIR/cpp/src/TOBE_Patched/kuku/: common.h
Experiments/PIR/cpp/src/TO_BE_Udated/Kuku/: kuku.h
Experiments/PIR/cpp/src/fss/: aesni-x86_64.S  aesni_wrapper.c  fss-client.cpp  fss-common.cpp  fss-common.h  fss-server.cpp  fss-server.h
Experiments/PIR/cpp/src/tests/access_multiple_accesses/: access_multiple_blocks.sh  indices.csv
Experiments/PIR/rust/: Cargo.toml  README.md
Experiments/PIR/rust/src/: main.rs
