[package]
name = "pir_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "pbs-stats"] }
rand = "0.8"

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]

[profile.dev]
incremental = true

[profile.release]
incremental = true